<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>at.fh-campuswien.dev.gr5</groupId>
    <artifactId>common</artifactId>
    <version>1.0-SNAPSHOT</version>
    <properties>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
    </properties>

    <dependencies>
        <dependency>
            <groupId>at.falb.games.alcatraz.api</groupId>
            <artifactId>alcatraz-lib.jar</artifactId>
            <version>1.0</version>
            <scope>system</scope>
            <systemPath>${basedir}/../alcatraz-lib.jar</systemPath>
        </dependency>
    </dependencies>

</project>
